--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Sample App</title>
+    <title>음성 인식 챗봇 데모</title>
     <link rel="shortcut icon" href="">
 </head>
 <body>
